Grouped skills per language

--- a/web/index.html
+++ b/web/index.html
@@ -128,39 +128,17 @@
                 <li class="block">
                     <h3>
                         <i class="fa fa-asterisk"></i>
-                        Programming languages
+                        PHP
                     </h3>
                     <ul>
                         <li>
-                            PHP
+                            General knowledge
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
                         <li>
-                            JavaScript
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                        </li>
-                        <li>
-                            Bash
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                        </li>
-                        <li>
-                            I’m currently learning Scala and have also used Cobol and VB script
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="block">
-                    <h3>
-                        <i class="fa fa-asterisk"></i>
-                        Frameworks
-                    </h3>
-                    <ul>
-                        <li>
-                            Symfony 2/3
+                            Symfony Framework 2/3
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
@@ -170,12 +148,85 @@
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
                         <li>
-                            Backbone/Marionette
+                            Unit & integraton testing with PHPunit
                             <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Quality inspection with PHPMD, PHPCS, PHPlint
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+
+                        <li>
+                            Vulnerability checking with Sensiolabs Security Checker
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
                     </ul>
                 </li>
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-asterisk"></i>
+                        JavaScript
+                    </h3>
+                    <ul>
+                        <li>
+                            General knowledge
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+
+
+                        <li>
+                            Backbone/Marionette framework
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+
+                        <li>
+                            UnderscoreJs
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+
+                        <li>
+                            Wreqr
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+
+                        <li>
+                            JQuery
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+
+                        <li>
+                            TODO: Gulp, Grunt, RequireJS, NPM, Bower
+                        </li>
+
+                        <li>
+                            Quality inspection with JSHint
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+
+
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-asterisk"></i>
+                        Other languages
+                    </h3>
+                    <ul>
+                        <li>
+                            I’m currently learning Scala and have also used Cobol and VB script
+
+                        </li>
+                    </ul>
+                 </li>
 
                 <li class="block">
                     <h3>
@@ -191,6 +242,10 @@
                         <li>
                             TDD
                             <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            BDD
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
                         <li>
@@ -270,9 +325,6 @@
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
-                        <li>
-                            TODO: Gulp, Grunt, UnderscoreJS RequireJS
-                        </li>
                     </ul>
                 </li>
                 <li class="block">
@@ -296,36 +348,7 @@
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
-                        <li>
-                            PHPunit
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                        </li>
-                        <li>
-                            PHPMD
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                        </li>
-                        <li>
-                            PHPCS
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                        </li>
-                        <li>
-                            PHPLint
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                        </li>
-                        <li>
-                            JSHint
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                        </li>
-                        <li>
-                            Symfony Security Checker
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                        </li>
+
                     </ul>
                 </li>
 
@@ -361,9 +384,6 @@
                         <li>
                             SVN
                             <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                        </li>
-                        <li>
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
                     </ul>
@@ -429,6 +449,7 @@
                         System Administration
                     </h3>
                     <ul>
+
                         <li>
                             Linux
                             <i class="fa fa-plus-circle palette-rose"></i>
@@ -443,6 +464,11 @@
                         </li>
                         <li>
                             FreeBsd
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Bash
+                            <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
                     </ul>
