Added skills + some styling

--- a/web/index.html
+++ b/web/index.html
@@ -129,19 +129,23 @@
                     <h3>
                         <i class="fa fa-asterisk"></i>
                         PHP
+                        <i class="fa fa-plus-circle palette-rose"></i>
+                        <i class="fa fa-plus-circle palette-rose"></i>
+                        <i class="fa fa-plus-circle palette-rose"></i>
                     </h3>
                     <ul>
                         <li>
                             General knowledge
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                            <i class="fa fa-plus-circle palette-rose"></i>
+
                         </li>
                         <li>
                             Symfony Framework 2/3
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Composer
                         </li>
                         <li>
                             Zend Framework 1
@@ -152,6 +156,9 @@
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Functional testing with Behat
                         </li>
                         <li>
                             Quality inspection with PHPMD, PHPCS, PHPlint
@@ -202,7 +209,19 @@
                         </li>
 
                         <li>
-                            TODO: Gulp, Grunt, RequireJS, NPM, Bower
+                            Gulp
+                        </li>
+                        <li>
+                            Grunt
+                        </li>
+                        <li>
+                            RequireJS
+                        </li>
+                        <li>
+                            NPM
+                        </li>
+                        <li>
+                            Bower
                         </li>
 
                         <li>
@@ -222,6 +241,12 @@
                     </h3>
                     <ul>
                         <li>
+                            XML
+                        </li>
+                        <li>
+                            Markdown
+                        </li>
+                        <li>
                             I’m currently learning Scala and have also used Cobol and VB script
 
                         </li>
@@ -231,9 +256,18 @@
                 <li class="block">
                     <h3>
                         <i class="fa fa-asterisk"></i>
-                        Concepts
+                        Development methodologies & concepts
                     </h3>
                     <ul>
+                        <li>
+                            Agile/Scrum
+                        </li>
+                        <li>
+                            Object oriented programming
+                        </li>
+                        <li>
+                            Functional programming
+                        </li>
                         <li>
                             Hexagonal architecture
                             <i class="fa fa-plus-circle palette-rose"></i>
@@ -267,7 +301,7 @@
                 <li class="block">
                     <h3>
                         <i class="fa fa-ship"></i>
-                        Deployment & Provisioning automation
+                        Hosting, Deployment & Provisioning automation
                     </h3>
                     <ul>
                         <li>
@@ -289,6 +323,14 @@
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
+                        <li>
+                            Virtualbox
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Digital Ocean
+                        </li>
                     </ul>
                 </li>
 
@@ -298,6 +340,9 @@
                         Authentication
                     </h3>
                     <ul>
+                        <li>
+                            HTTP
+                        </li>
                         <li>
                             OAuth2
                             <i class="fa fa-plus-circle palette-rose"></i>
@@ -321,16 +366,22 @@
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
                         <li>
-                            CSS
+                            CSS/Less/Sass
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Twitter bootstrap
+                        </li>
+                        <li>
+                            Gimp
                         </li>
                     </ul>
                 </li>
                 <li class="block">
                     <h3>
                         <i class="fa fa-check"></i>
-                        Quality Assurance
+                        Quality Assurance and build tools
                     </h3>
                     <ul>
                         <li>
@@ -348,7 +399,9 @@
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
-
+                        <li>
+                            Make
+                        </li>
                     </ul>
                 </li>
 
@@ -373,9 +426,14 @@
                 <li class="block">
                     <h3>
                         <i class="fa fa-copy"></i>
-                        Version Control
+                        Development & productivity tools
                     </h3>
                     <ul>
+                        <li>
+                            PHPStorm
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
                         <li>
                             Git
                             <i class="fa fa-plus-circle palette-rose"></i>
@@ -385,6 +443,18 @@
                             SVN
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Slack
+                        </li>
+                        <li>
+                            Jira
+                        </li>
+                        <li>
+                            Trello
+                        </li>
+                        <li>
+                            GitHub
                         </li>
                     </ul>
                 </li>
@@ -435,13 +505,26 @@
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
                         </li>
-                        <li>
-                            Swedish
-                            <i class="fa fa-plus-circle palette-rose"></i>
-                        </li>
                     </ul>
                 </li>
 
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-server"></i>
+                        HTTP Servers
+                    </h3>
+                    <ul>
+                        <li>
+                            Apapche
+                        </li>
+                        <li>
+                            Nginx
+                        </li>
+                        <li>
+                            HA Proxy
+                        </li>
+                    </ul>
+                </li>
 
                 <li class="block">
                     <h3>
@@ -449,9 +532,8 @@
                         System Administration
                     </h3>
                     <ul>
-
                         <li>
-                            Linux
+                            Linux Alpine/Ubuntu/Debian/Centos
                             <i class="fa fa-plus-circle palette-rose"></i>
                             <i class="fa fa-plus-circle palette-rose"></i>
 
@@ -476,7 +558,7 @@
 
                 <li class="block">
                     <h3>
-                        <i class="fa fa-server"></i>
+                        <i class="fa fa-asterisk"></i>
                         None work related skills
                     </h3>
                     <ul>
