Blocks should be services

--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="#about-me">About Me</a></li>
-                    <li><a href="#blocks">What I can do</a></li>
+                    <li><a href="#services">What I can do</a></li>
                     <li><a href="#public-appearances">Public appearances</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -41,7 +41,7 @@
 
 
         <section class="services">
-            <a id="blocks"></a>
+            <a id="services"></a>
             <h2>
                 Let me help you with:
             </h2>
