--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="#about-me">About Me</a></li>
-                    <li><a href="#services">What I can do for you</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#expertise">My expertise</a></li>
                     <li><a href="#work">My work</a></li>
                     <li><a href="#public-appearances">Public appearances</a></li>
