Validate HTML in test

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html>
     <head>
+        <meta charset="UTF-8">
         <title>
             Lucas van Lierop, freelance software engineer #php #symfony #docker
         </title>
