Also fail on HTML validate warnings

--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,7 @@
 
         <section class="about-me">
             <a id="about-me" class="smooth"></a>
+            <h2>About me</h2>
             <img class="photo" src="img/me-small.jpeg" alt="this is me"/>
 
             TODO: less <strong>'I'</strong>
