--- a/src/content/about.html
+++ b/src/content/about.html
@@ -4,45 +4,30 @@ layout: "default"
 
 <section>
     <h2>
-        About Lucas van Lierop
+        About me
     </h2>
     <img class="photo" src="img/me-small.jpeg" alt="this is me"/>
+
     <p>
-        I'm also organizer of the <a href="http://conference.domcode.org">DomCode conference</a> and
-        <a href="http://meetup.com/domcode">DomCode meetup</a> and an occasional <a href="public-appearances/">speaker</a>.
-    </p>
-    <p>
-        I have worked for various agencies in the last 12 years and recently started as freelance software
-        engineer.
-    </p>
-    <p>
-        I can help you by building twell designed, well tested and properly documented applications that meet
+        Hi, I'm Lucas, freelance software engineer. I can help you by building well designed, well tested and properly documented applications that meet
         your business case.
     </p>
+
     <p>
-        I want to learn new things all the time
+        I love to work with other freelancers and companies. Interested?,
+        <a href="/#contact" class="button palette-bg-salmon"><i class="fa fa-phone"></i> Contact me</a>
+    </p>
+
+    <p>
+        I previously worked at Rhinocreations.nl (now Ganda.com), i-Aspect.com and Ibuildings.nl.
+    </p>
+
+    <p>
+        Like to see my <a href="work/">work?</a>
+    </p>
+
+    <p>
+        Besides being engineer I'm also organizer of the <a href="http://conference.domcode.org">DomCode conference</a> and
+        <a href="http://meetup.com/domcode">DomCode meetup</a> and occasional <a href="public-appearances/">speaker</a>.
     </p>
 </section>
-
-<section>
-    <h2>Career</h2>
-    <ul class="block-list">
-        <li class="block">
-            Freelance software engineer
-            Januari 2017 - Present
-        </li>
-        <li class="block">
-            Developer at Ibuildings (Utrecht)
-            October 2011 - Decemeber 2016
-        </li>
-        <li class="block">
-            Developer at i-Aspect (Utrecht)
-            January 2009 - September 2011
-        </li>
-        <li class="block">
-            Developer at Rhinocreations (Amsterdam)
-            September 2004 - December 2008
-        </li>
-    </ul>
-</section>
-
