Added employers to work

--- a/src/content/work.html
+++ b/src/content/work.html
@@ -17,7 +17,7 @@ layout: "default"
         <li class="block">
             <ul>
                 <li>
-                    Mijndomein
+                    Mijndomein (at Ibuildings.nl)
                     Developing a webshop
                     Refactoring a legacy application by introducing QA, routing, dependency injection
                     Developing a up single sign on for the platform
@@ -25,37 +25,37 @@ layout: "default"
                     Coaching employees
                 </li>
                 <li>
-                    SURFnet
+                    SURFnet (at Ibuildings.nl)
                     Maintaining a single sign on middleware (OpenConext)
                     Automating deployment & provisioning
                 </li>
                 <li>
-                    Verzekeringssite (Hoyhoy)
+                    Verzekeringssite (Hoyhoy) (at Ibuildings.nl)
                     Developing insurance calculation modules
                 </li>
                 <li>
-                    Vakantieveilingen
+                    Vakantieveilingen (at i-Aspect.com)
                     Developing a website
                     Developing a bidding system
                 </li>
                 <li>
-                    FCUtrecht
+                    FCUtrecht (at i-Aspect.com)
                     Developing Website + CMS
                 </li>
                 <li>
-                    Fietswereld/Profile
+                    Fietswereld/Profile (at i-Aspect.com)
                     Developing Website + CMS
                 </li>
                 <li>
-                    Amstel/Heineken
+                    Amstel/Heineken (at Rhinocreations.nl)
                     Developing various international websites
                 </li>
                 <li>
-                    WebAds
+                    WebAds (at Rhinocreations.nl)
                     Developing Website + CMS
                 </li>
                 <li>
-                    Adrime (Weborama)
+                    Adrime (Weborama) (at Rhinocreations.nl)
                     Developing a high traffic click counter
                     Developing online advertisements
                 </li>
