Updated about page and made sure content links are more visible by enabling decoration again

--- a/src/content/about.html
+++ b/src/content/about.html
@@ -6,16 +6,20 @@ layout: "default"
     <h2>
         About me
     </h2>
+
     <img class="photo" src="img/me-small.jpeg" alt="this is me"/>
 
     <p>
-        Hi, I'm Lucas, freelance software engineer. I can help you by building well designed, well tested and properly documented applications that meet
-        your business case.
+        Hi, I'm Lucas, freelance software engineer. My goal is to build well designed, well tested and properly
+        documented applications that meet your business case.
     </p>
 
     <p>
-        I love to work with other freelancers and companies. Interested?,
-        <a href="/#contact" class="button palette-bg-salmon"><i class="fa fa-phone"></i> Contact me</a>
+        Besides being engineer I'm also organizer of <a href="http://domcode.org/">DomCode</a>, a non-profit foundation with 1200+
+        members that organizes events like the annual <a href="http://conference.domcode.org">DomCode conference</a> and
+        monthly
+        <a href="http://meetup.com/domcode">DomCode meetups</a> where (inter) national speakers share their knowledge on
+        software development.
     </p>
 
     <p>
@@ -27,7 +31,14 @@ layout: "default"
     </p>
 
     <p>
-        Besides being engineer I'm also organizer of the <a href="http://conference.domcode.org">DomCode conference</a> and
-        <a href="http://meetup.com/domcode">DomCode meetup</a> and occasional <a href="public-appearances/">speaker</a>.
+        Since I valude knowledge sharing a lot I became an occasional <a href="public-appearances/">speaker</a> myself.
+    </p>
+
+    <p>
+        I love to work with other freelancers and companies. Interested?
+    </p>
+
+    <p>
+        <a href="/#contact" class="button palette-bg-salmon"><i class="fa fa-phone"></i> Contact me</a>
     </p>
 </section>
