Improved content of work page

--- a/src/content/work.html
+++ b/src/content/work.html
@@ -8,58 +8,56 @@ layout: "default"
         My Work
     </h2>
     <p>
-        Since I just started I can't show any freelance work yet but here are some highlights of projects at did
-        at my
-        former
-        employers.
+        Since I just started as a freelance engineer there's no freelance work I can show yet but I'd like show some of the work
+        I did at my former employers: Rhinocreations.nl (now Ganda.com), i-Aspect.com and Ibuildings.nl
     </p>
+
     <ul class="block-list">
         <li class="block">
-            <ul>
-                <li>
-                    Mijndomein (at Ibuildings.nl)
-                    Developing a webshop
-                    Refactoring a legacy application by introducing QA, routing, dependency injection
-                    Developing a up single sign on for the platform
-                    Migrating applications from VM’s to containers
-                    Coaching employees
-                </li>
-                <li>
-                    SURFnet (at Ibuildings.nl)
-                    Maintaining a single sign on middleware (OpenConext)
-                    Automating deployment & provisioning
-                </li>
-                <li>
-                    Verzekeringssite (Hoyhoy) (at Ibuildings.nl)
-                    Developing insurance calculation modules
-                </li>
-                <li>
-                    Vakantieveilingen (at i-Aspect.com)
-                    Developing a website
-                    Developing a bidding system
-                </li>
-                <li>
-                    FCUtrecht (at i-Aspect.com)
-                    Developing Website + CMS
-                </li>
-                <li>
-                    Fietswereld/Profile (at i-Aspect.com)
-                    Developing Website + CMS
-                </li>
-                <li>
-                    Amstel/Heineken (at Rhinocreations.nl)
-                    Developing various international websites
-                </li>
-                <li>
-                    WebAds (at Rhinocreations.nl)
-                    Developing Website + CMS
-                </li>
-                <li>
-                    Adrime (Weborama) (at Rhinocreations.nl)
-                    Developing a high traffic click counter
-                    Developing online advertisements
-                </li>
-            </ul>
+            <h3>
+                Mijndomein.nl (at Ibuildings.nl)
+            </h3>
+            <p>
+                Mijndomein is a major player in consumer web hosting and domain registration. They have been working hard on
+                modernizing their platform to offer new features to their customers and to release them often and with ease.
+                As part of the Ibuildings team at Mijndomein I have trained employees in working with modern Javascript and PHP frameworks and testing tools
+                and helped them to build a (mobile) web shop.
+            </p>
+            </p>
+                Furthermore I have worked on carving out parts of their application to micro services and connecting them via HTTP API's
+                and message queues controlled by a central process manager and setting up a (Oauth2 based) single sign on solution
+                for authentication between all services and the existing platform.
+                applications. I have initiated the use of (Docker) containers which is now broadly adopted for production usage
+                accross the entire platform.
+            </p>
+        </li>
+        <li class="block">
+            <h3>
+                SURFnet.nl (at Ibuildings.nl)
+            </h3>
+            <p>
+                SURFnet provides IT infrastructure and online services to Dutch universities and research institutes.
+                One of the services SURFnet offers is the SAML based OpenConext platform which offers a 'collaborative infrastructure' which
+                allows students, teachers and researchers in the Netherlands to collaborate using online services.
+                As part of the Ibuildings team at SURFnet I did a lot of maintenance and worked on modernizing various
+                components of the platform, improve test and automating deployment and provisioning using Ansible.
+            </p>
+        </li>
+        <li class="block">
+            <h3>Verzekeringssite.nl (now Hoyhoy.nl) (at Ibuildings.nl)</h3>
+            <p>
+                Verzekeringssite.nl offers comparing and taking insurance policies.
+                As part of the team at Verzekeringssite I developed a service that aggregated data retrieved from 3rd party API's
+                and calculated the most suitable insurance policies based on user input in realtime.
+            </p>
+        </li>
+        <li class="block">
+            <h3>Other clients</h3>
+            <p>
+                While I'm mainly focussing on backend (web) applications right now I have done a lot of
+                (campaign) website, CMS and advertisement work for clients like: Vakantieveilingen.nl,
+                FC Utrecht, Fietswereld/Profile, Heineken/Amstel, WebAds and Adrime (now Weborama).
+            </p>
         </li>
     </ul>
 </section>
