--- a/src/content/about.html
+++ b/src/content/about.html
@@ -10,8 +10,12 @@ layout: "default"
     <img class="photo" src="img/me-small.jpeg" alt="this is me"/>
 
     <p>
-        Hi, I'm Lucas, freelance software engineer. My goal is to build well designed, well tested and properly
-        documented applications that meet your business case.
+        Hi, I'm Lucas, freelance software engineer, working professionaly since 2004.
+        My goal is to build well designed, well tested and properly documented applications that exceed your expectations.
+        I work mostly in PHP and Javascript but I'm learning other languages as well. For more info check my <a href="expertise/">expertise</a>
+
+    <p>
+        Like to see my <a href="work/">work?</a>
     </p>
 
     <p>
@@ -20,22 +24,11 @@ layout: "default"
         monthly
         <a href="http://meetup.com/domcode">DomCode meetups</a> where (inter) national speakers share their knowledge on
         software development.
+        Since I value knowledge sharing a lot I became an occasional <a href="public-appearances/">speaker</a> myself.
     </p>
 
     <p>
-        I previously worked at Rhinocreations.nl (now Ganda.com), i-Aspect.com and Ibuildings.nl.
-    </p>
-
-    <p>
-        Like to see my <a href="work/">work?</a>
-    </p>
-
-    <p>
-        Since I valude knowledge sharing a lot I became an occasional <a href="public-appearances/">speaker</a> myself.
-    </p>
-
-    <p>
-        I love to work with other freelancers and companies. Interested?
+        I love to work with other freelancers or companies, contact me if you are interested!
     </p>
 
     <p>
