Updated expertise page

--- a/src/content/expertise.html
+++ b/src/content/expertise.html
@@ -268,7 +268,7 @@ layout: "default"
                 None work related expertise
             </h3>
             <ul>
-                <li>Caring for my family(I have a wife and two sons)</li>
+                <li>Caring for my family</li>
                 <li>Event organizing</li>
                 <li>General construction work</li>
                 <li>MIG welding</li>
