Moved contact to a separate page

--- a/src/content/about.html
+++ b/src/content/about.html
@@ -32,6 +32,6 @@ layout: "default"
     </p>
 
     <p>
-        <a href="/#contact" class="button palette-bg-salmon"><i class="fa fa-phone"></i> Contact me</a>
+        <a href="contact/" class="button palette-bg-salmon"><i class="fa fa-phone"></i> Contact me</a>
     </p>
 </section>
