--- a/src/content/index.html
+++ b/src/content/index.html
@@ -13,7 +13,9 @@ layout: "default"
         I'm a software engineer specialized in creating, refactoring or containerizing (web) applications.
     </p>
 
-    <a href="#contact" class="button palette-bg-salmon"><i class="fa fa-phone"></i> Contact me</a>
+    <p>
+        <a href="contact/" class="button palette-bg-salmon"><i class="fa fa-phone"></i> Contact me</a>
+    </p>
 
     <div style="clear:both;"></div>
 
@@ -113,30 +115,4 @@ layout: "default"
     <p>
         Want to see more of my <a href="work/" class="palette-bg-salmon button">work?</a>
     </p>
-</section>
-
-<section class="contact">
-    <a id="contact"></a>
-    <h2>
-        Contact
-    </h2>
-    <ul class="contact-links">
-        <li>
-            <a href="tel:+31653593790"><i class="fa fa-phone" style="color:#25d366" title="Phone / Signal"></i>
-                +31653593790</a>
-        </li>
-        <li>
-            <a href="mailto:me@lucasvanlierop.nl"><i class="fa fa-envelope-open" title="Mail"></i>
-                me@lucasvanlierop.nl</a>
-        </li>
-        <li>
-            <a href="https://twitter.com/lucasvanlierop"><i class="fa fa-twitter" style="color:#00aced"
-                                                            title="Twitter"></i></a>
-        </li>
-        <li>
-            <a href="https://www.meetup.com/DomCode/members/154691052/"><i class="fa fa-meetup"
-                                                                           style="color: rgb(237, 28,64)"
-                                                                           title="Meetup"></i></a>
-        </li>
-    </ul>
 </section>
