Added about link

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -10,7 +10,7 @@ layout: "default"
     <img class="photo" src="img/me-small.jpeg" alt="this is me"/>
 
     <p>
-        I'm a software engineer specialized in creating, refactoring or containerizing (web) applications.
+        I'm a <a href="about/">freelance software engineer</a> specialized in creating, refactoring or containerizing (web) applications.
     </p>
 
     <p>
