--- a/src/content/index.html
+++ b/src/content/index.html
@@ -24,19 +24,19 @@ layout: "default"
 <section class="services">
     <a id="services"></a>
     <h2>
-        Let me help you with:
+        Let me help you:
     </h2>
     <ul class="block-list">
         <li class="block">
             <h3>
                 <i class="fa fa-files-o palette-rose"></i>
-                You want to build a modern (web) application.
+                You want to build a modern (web) application
             </h3>
             <p>
-                I know my around in modern PHP and can help you by building a web application, API,
+                I know my way around in modern PHP and can help you with building a web application, API,
                 microservice,
                 middleware.
-                with proper documentation, tests.
+                With proper documentation and tests.
             </p>
         </li>
 
@@ -50,7 +50,7 @@ layout: "default"
                 Reasons being the use of older, maybe even obsolete technologies. Lack of tests, close coupling.
                 When the application is still (very) valuable to your company I can help to modernize the
                 application,
-                set up a testing strategy, write documentation.
+                set up a testing strategy and write documentation.
             </p>
         </li>
 
@@ -58,7 +58,7 @@ layout: "default"
             <h3>
                 <i class="fa fa-server palette-petrol"></i>
                 You would like to be able to deploy any time of the day but your current setup doesn't let you
-                do that.
+                do that
             </h3>
             <p>
                 The era of waiting hours, days or even months before deploying a new version of an application
@@ -76,21 +76,21 @@ layout: "default"
             </h3>
             <p>
                 Many issues with applications are caused by differences in the dev/test/production pipeline.
-                This can be prevented by making sure the stack of Operating system + web server + runtime + the
+                This can be prevented by making sure the stack of operating system + web server + runtime + the
                 application itself is consistent in every stage.
-                Even more than with Virtual machines this can be achieved by using Linux containers.
+                Even more than with virtual machines this can be achieved by using Linux containers.
             </p>
         </li>
 
         <li class="block">
             <h3>
                 <i class="fa fa-users palette-salmon"></i>
-                You want to your (junior) developers to be trained in services or coached in their working
-                process.
+                You want your (junior) developers to be trained in services or coached in their working
+                process
             </h3>
             <p>
                 Junior developers are often very eager to learn and grasp knowledge.
-                I can help them learning, making the right choices...
+                I can help them to make the right choices.
             </p>
         </li>
 
@@ -98,7 +98,7 @@ layout: "default"
 
             <h3>
                 <i class="fa fa-check palette-dark-mint"></i>
-                You own an application and you want to know how well its built
+                You own an application and you want to know how well it's built
             </h3>
 
             <p>
@@ -110,9 +110,11 @@ layout: "default"
         </li>
     </ul>
     <p>
-        Want to see more of my <a href="expertise/" class="palette-bg-salmon button">expertise?</a>
+         <p>
+        More of my <a href="expertise/" class="palette-bg-salmon button">expertise</a>
     </p>
     <p>
-        Want to see more of my <a href="work/" class="palette-bg-salmon button">work?</a>
+         <p>
+        More of my <a href="work/" class="palette-bg-salmon button">work</a>
     </p>
 </section>
