--- a/src/content/about.html
+++ b/src/content/about.html
@@ -10,25 +10,22 @@ layout: "default"
     <img class="photo" src="img/me-small.jpeg" alt="this is me"/>
 
     <p>
-        Hi, I'm Lucas, freelance software engineer, working professionaly since 2004.
+        I'm Lucas, a freelance software engineer, working professionaly since 2004.
         My goal is to build well designed, well tested and properly documented applications that exceed your expectations.
-        I work mostly in PHP and Javascript but I'm learning other languages as well. For more info check my <a href="expertise/">expertise</a>
-
+         </p>
     <p>
-        Like to see my <a href="work/">work?</a>
-    </p>
+        I work mostly in PHP and Javascript, but I'm learning other languages as well. For more info check my <a href="expertise/">expertise</a>.  </p>
 
-    <p>
+       <p>
         Besides being engineer I'm also organizer of <a href="http://domcode.org/">DomCode</a>, a non-profit foundation with 1200+
         members that organizes events like the annual <a href="http://conference.domcode.org">DomCode conference</a> and
-        monthly
-        <a href="http://meetup.com/domcode">DomCode meetups</a> where (inter) national speakers share their knowledge on
+        monthly DomCode meetups where (inter)national speakers share their knowledge on
         software development.
         Since I value knowledge sharing a lot I became an occasional <a href="public-appearances/">speaker</a> myself.
-    </p>
+   
 
     <p>
-        I love to work with other freelancers or companies, contact me if you are interested!
+        I love to work with other freelancers or companies. Contact me if you are interested.
     </p>
 
     <p>
