--- a/src/content/work.html
+++ b/src/content/work.html
@@ -8,7 +8,7 @@ layout: "default"
         My Work
     </h2>
     <p>
-        Since I just started as a freelance engineer there's no freelance work I can show yet but I'd like show some of the work
+        This is some of the work
         I did at my former employers: Rhinocreations.nl (now Ganda.com), i-Aspect.com and Ibuildings.nl
     </p>
 
@@ -20,13 +20,13 @@ layout: "default"
             <p>
                 Mijndomein is a major player in consumer web hosting and domain registration. They have been working hard on
                 modernizing their platform to offer new features to their customers and to release them often and with ease.
-                As part of the Ibuildings team at Mijndomein I have trained employees in working with modern Javascript and PHP frameworks and testing tools
-                and helped them to build a (mobile) web shop.
+                As part of the Ibuildings team at Mijndomein I have trained employees in working with modern Javascript and PHP frameworks and testing tools. 
+               I ahelped them to build a (mobile) web shop as well.
             </p>
             <p>
                 Furthermore I have worked on carving out parts of their application to micro services and connecting them via HTTP API's
                 and message queues controlled by a central process manager and setting up a (Oauth2 based) single sign on solution
-                for authentication between all services and the existing platform.
+                for authentication between all services and the existing platform 
                 applications. I have initiated the use of (Docker) containers which is now broadly adopted for production usage
                 accross the entire platform.
             </p>
@@ -37,7 +37,7 @@ layout: "default"
             </h3>
             <p>
                 SURFnet provides IT infrastructure and online services to Dutch universities and research institutes.
-                One of the services SURFnet offers is the SAML based OpenConext platform which offers a 'collaborative infrastructure' which
+                One of the services SURFnet offers is the SAML based OpenConext platform which offers a 'collaborative infrastructure' that
                 allows students, teachers and researchers in the Netherlands to collaborate using online services.
                 As part of the Ibuildings team at SURFnet I did a lot of maintenance and worked on modernizing various
                 components of the platform, improve test and automating deployment and provisioning using Ansible.
@@ -54,7 +54,7 @@ layout: "default"
         <li class="block">
             <h3>Other clients</h3>
             <p>
-                While I'm mainly focussing on backend (web) applications right now I have done a lot of
+                While I mainly focus on backend (web) applications I have done a lot of
                 (campaign) website, CMS and advertisement work for clients like: Vakantieveilingen.nl,
                 FC Utrecht, Fietswereld/Profile, Heineken/Amstel, WebAds and Adrime (now Weborama).
             </p>
