--- a/src/content/public-appearances.html
+++ b/src/content/public-appearances.html
@@ -10,8 +10,8 @@ layout: "default"
 
     <p>
         Because of my work for <a href="http://www.meetup.com/domcode/">DomCode</a> I got interested in public speaking
-        myself. Below you can see some of my recent talks, workshops etc. I speak mostly about software but occasionally
-        other topics like welding (which I is one of my favorite things to do) pop up too. I'm currently planning new talks/workshops for 2017!
+        myself. Below you can see some of my recent talks, workshops etc. I mostly speak about software but occasionally
+        other topics like welding (which is one of my favorite things to do) pop up too. I'm currently planning new talks/workshops for 2017.
     </p>
 
     <ul class="block-list">
@@ -21,14 +21,14 @@ layout: "default"
                 2016, October 25
             </h3>
             <p>
-                Lightning talk: "containerizing desktop applications" at:
+                Lightning talk: "Containerizing desktop applications" at:
                 <a href="http://www.meetup.com/DomCode/events/234761190/">DomCode meetup</a>
             </p>
         </li>
         <li class="block">
             <h3>
                 <i class="fa fa-users palette-grey"></i>
-                2016, june 23
+                2016, June 23
             </h3>
             <p>
                 Workshop: "Containerizing a production environment" at
@@ -38,7 +38,7 @@ layout: "default"
         <li class="block">
             <h3>
                 <i class="fa fa-users palette-grey"></i>
-                2016, februari 25
+                2016, February 25
             </h3>
             <p>
                 Live demo/workshop "MIG welding" at
@@ -49,7 +49,7 @@ layout: "default"
         <li class="block">
             <h3>
                 <i class="fa fa-users palette-grey"></i>
-                2015, june 26-27
+                2015, June 26-27
             </h3>
             <p>
                 Unconference host at:
