--- a/src/content/work.html
+++ b/src/content/work.html
@@ -8,8 +8,7 @@ layout: "default"
         My Work
     </h2>
     <p>
-        This is some of the work
-        I did at my former employers: Rhinocreations.nl (now Ganda.com), i-Aspect.com and Ibuildings.nl
+        This is some of the work I did at my former employers.
     </p>
 
     <ul class="block-list">
@@ -20,13 +19,13 @@ layout: "default"
             <p>
                 Mijndomein is a major player in consumer web hosting and domain registration. They have been working hard on
                 modernizing their platform to offer new features to their customers and to release them often and with ease.
-                As part of the Ibuildings team at Mijndomein I have trained employees in working with modern Javascript and PHP frameworks and testing tools. 
+                As part of the Ibuildings team at Mijndomein I have trained employees in working with modern Javascript and PHP frameworks and testing tools.
                I ahelped them to build a (mobile) web shop as well.
             </p>
             <p>
                 Furthermore I have worked on carving out parts of their application to micro services and connecting them via HTTP API's
                 and message queues controlled by a central process manager and setting up a (Oauth2 based) single sign on solution
-                for authentication between all services and the existing platform 
+                for authentication between all services and the existing platform
                 applications. I have initiated the use of (Docker) containers which is now broadly adopted for production usage
                 accross the entire platform.
             </p>
