Added a smaller image on frontpage

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -7,7 +7,7 @@ layout: "default"
 
     <h2>About me</h2>
 
-    <img class="photo" src="img/me-small.jpeg" alt="this is me"/>
+    <img class="photo" src="img/me_300px.jpeg" alt="this is me"/>
 
     <p>
         I'm a <a href="about/">freelance software engineer</a> specialized in creating, refactoring or containerizing (web) applications.
